Added more styles and icons

--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <title>Review HTML/CSS - About</title>
 
     <!-- Attach CSS here -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/about.css">
   </head>
@@ -42,6 +44,11 @@
           <td>2, 2</td>
         </tr>
       </table>
+      <div class="mid-right">
+        <button type="button" name="button">Click Me!</button>
+      </div>
+      <h5 class="selector"><i class="material-icons">favorite</i>Selector Sample Text</h5>
+      <h6 class="selecto pull-right">Selector Sample Text</h6>
     </main>
     <footer>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo sint praesentium <span class="bold-text">officiis</span> expedita ipsum facilis, sit, aperiam eius quam velit beatae quaerat laudantium omnis at. Deserunt beatae vero voluptate. Pariatur.</p>
